opam-version: "1.2"
available: [ ocaml-version >= "4.05.0" ]

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-doc: ["jbuilder" "build" "@doc" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "jbuilder" {>="1.0+beta13"}
  #########################
  "core"   {>= "v0.10.0"}
  "cstruct" {>= "1.0.1"}
  "cstruct-async"
  "menhir"
  "ppx_compare"
  "ppx_core"
  "ppx_cstruct"
  "ppx_deriving" {>= "4.2"}
  "ppx_driver"
  "ppx_enumerate"
  "ppx_fields_conv"
  "ppx_metaquot"
  "ppx_sexp_conv"
  "ppx_tools_versioned"
  "sedlex"
  "sexplib"
  "yojson" {>= "1.2.0"}
]
